--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "firebase": "^8.4.1",
     "next": "10.1.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
-  }
+    "react-dom": "17.0.2",
+    "react-firebase-hooks": "^3.0.3"
+  },
+  "devDependencies": {}
 }
