--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "next": "10.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-firebase-hooks": "^3.0.3"
-  },
-  "devDependencies": {}
+    "react-firebase-hooks": "^3.0.3",
+    "react-hot-toast": "^1.0.2"
+  }
 }
